// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MenuItem
  classes={
    Object {
      "isDisabled": "MenuItem-isDisabled-1",
    }
  }
  isDisabled={false}
  redirectTo={[Function]}
  title="Title"
  url="/"
/>
`;

exports[`renders correctly disabled 1`] = `
<MenuItem
  classes={
    Object {
      "isDisabled": "MenuItem-isDisabled-1",
    }
  }
  isDisabled={true}
  redirectTo={[Function]}
  title="Title"
  url="/"
/>
`;

exports[`renders correctly with icon 1`] = `
<MenuItem
  classes={
    Object {
      "isDisabled": "MenuItem-isDisabled-1",
    }
  }
  icon={<UNDEFINED />}
  isDisabled={false}
  redirectTo={[Function]}
  title="Title"
  url="/"
/>
`;
